--- a/portfolio.html
+++ b/portfolio.html
@@ -98,12 +98,12 @@
         <section class="section">
             <div class="container">
             <h1 class="main__title visually-hidden">Портфолио</h1>
-            <ul class="pagination list">
-                <li class="paganation__item"><button class="pagination__btn" type="button">Все</button></li>
-                <li class="paganation__item"><button class="pagination__btn" type="button">Веб-сайты</button></li>
-                <li class="paganation__item"><button class="pagination__btn" type="button">Приложения</button></li>
-                <li class="paganation__item"><button class="pagination__btn" type="button">Дизайн</button></li>
-                <li class="paganation__item"><button class="pagination__btn" type="button">Маркетинг</button></li>
+            <ul class="cards list">
+                <li class="cards__item"><button class="cards__btn" type="button">Все</button></li>
+                <li class="cards__item"><button class="cards__btn" type="button">Веб-сайты</button></li>
+                <li class="cards__item"><button class="cards__btn" type="button">Приложения</button></li>
+                <li class="cards__item"><button class="cards__btn" type="button">Дизайн</button></li>
+                <li class="cards__item"><button class="cards__btn" type="button">Маркетинг</button></li>
             </ul>
             <ul class="project list">
                 <li class="project__item">
@@ -211,10 +211,10 @@
                         </div>
                         <div class="project__details">
                             <h2 class="project__name">Ресторан Seafood</h2>
-                             <p  class="project__category" href="">Приложение</p>
+                                <p  class="project__category" href="">Приложение</p>
                         </div> 
                 
-                    </a>
+                    </a> 
                 </li>
                 <li class="project__item">
                     <a class="project__link" href="">
