--- a/index.html
+++ b/index.html
@@ -193,10 +193,10 @@
       </section>
       <section class="about section">
         <div class="container">
-          <h2 class="about__title">Чем мы занимаемся</h2>
-          <ul class="about__list list">
-            <li class="about__item">
-              <div class="about__wrapper">
+          <h2 class="styless__title">Чем мы занимаемся</h2>
+          <ul class="styless__list list">
+            <li class="styless__item">
+              <div class="stylesst__wrapper">
                 <picture>
                   <source
                     srcset="./images/img1@2x.jpg 2x"
@@ -204,18 +204,18 @@
                     type="image/jpeg"
                   />
                   <img
-                    class="about__img"
+                    class="styless__img"
                     src="./images/img1.jpg"
                     alt="программист за работой"
                     width="370"
                     height="294"
                   />
                 </picture>
-                <p class="about__descriotion">Десктопные приложения</p>
+                <p class="styless__descriotion">Десктопные приложения</p>
               </div>
             </li>
-            <li class="about__item">
-              <div class="about__wrapper">
+            <li class="styless__item">
+              <div class="styless__wrapper">
                 <picture>
                   <source
                     srcset="./images/img2@2x.jpg 2x"
@@ -223,18 +223,18 @@
                     type="image/jpeg"
                   />
                   <img
-                    class="about__img"
+                    class="styless__img"
                     src="./images/img2.jpg"
                     alt="телефон и ноутбук"
                     width="370"
                     height="294"
                   />
                 </picture>
-                <p class="about__descriotion">Мобильные приложения</p>
+                <p class="styless__descriotion">Мобильные приложения</p>
               </div>
             </li>
-            <li class="about__item">
-              <div class="about__wrapper">
+            <li class="styless__item">
+              <div class="styless__wrapper">
                 <picture>
                   <source
                     srcset="./images/img3@2x.jpg 2x"
@@ -242,14 +242,14 @@
                     type="image/jpeg"
                   />
                   <img
-                    class="about__img"
+                    class="styless__img"
                     src="./images/img3.jpg"
                     alt="графический планшет"
                     width="370"
                     height="294"
                   />
                 </picture>
-                <p class="about__descriotion">Дизайнерские решения</p>
+                <p class="styless__descriotion">Дизайнерские решения</p>
               </div>
             </li>
           </ul>
