--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
           </ul>
         </div>
       </section>
-      <section class="about section">
+      <section class="styless section">
         <div class="container">
           <h2 class="styless__title">Чем мы занимаемся</h2>
           <ul class="styless__list list">
@@ -770,7 +770,7 @@
                 name="invites-email"
                 id="invites-email"
                 placeholder="E-mail"
-                class="join__email"
+                class="invites__email"
               />
               <button type="submit" class="invites__button">
                 Подписаться
