--- a/portfolio.html
+++ b/portfolio.html
@@ -452,8 +452,8 @@
                     </ul>
                 </div>
                 </address>
-                <div class="join join__networks">
-                    <p class="join__title">присоединяйтесь</p>
+                <div class="invites invites__networks">
+                    <p class="invites__title">присоединяйтесь</p>
                     <ul class="networks list">
                         <li class="networks__item">
                             <a class="networks__link networks__icon--dark__mode" href="">
@@ -490,14 +490,14 @@
                     </ul> 
                 </div> 
         </div>
-        <div class="join">
-            <form class="join__form">
-                <p class="join__title">Подпишитесь на рассылку</p>
-                <div class="join__container">
-                    <label for="join-email"></label>
-                    <input type="email" name="join-email" id="join-email" placeholder="E-mail" class="join__email" />   
-                    <button type="submit" class="join__button">Подписаться
-                        <svg class="join__icon" width="24px" height="24px">
+        <div class="invites">
+            <form class="invites__form">
+                <p class="invites__title">Подпишитесь на рассылку</p>
+                <div class="invites__container">
+                    <label for="invites-email"></label>
+                    <input type="email" name="invites-email" id="invites-email" placeholder="E-mail" class="invites__email" />   
+                    <button type="submit" class="invites__button">Подписаться
+                        <svg class="invites__icon" width="24px" height="24px">
                             <use href="./images/icons.svg#icon-send"></use>
                         </svg>
                     </button>
