--- a/index.html
+++ b/index.html
@@ -847,9 +847,13 @@
                 name="checkbox"
                 class="form__input--checkbox"
               />
-              <span class="form__icon--checkbox"></span>
-              Соглашаюсь с рассылкой и принимаю
-              <a class="form__link">Условия договора</a>
+              <span class="form__icon--checkbox" width="16" height="15">
+                <use href="./images/icons.svg#check"></use
+              ></span>
+              <span class="form__icon--te">
+                Соглашаюсь с рассылкой и принимаю
+                <a class="form__link">Условия договора</a>
+              </span>
             </label>
           </div>
 
