--- a/index.html
+++ b/index.html
@@ -629,42 +629,42 @@
             <li class="clients__item">
               <a class="clients__link" href="">
                 <svg class="client__icon" width="106px" height="60px">
-                  <use href="./images/icons.svg#icon-Company-1"></use>
+                  <use href="./images/icons.svg#client-1"></use>
                 </svg>
               </a>
             </li>
             <li class="clients__item">
               <a class="clients__link" href="">
                 <svg class="client__icon" width="106px" height="60px">
-                  <use href="./images/icons.svg#icon-Company-2"></use>
+                  <use href="./images/icons.svg#client-2"></use>
                 </svg>
               </a>
             </li>
             <li class="clients__item">
               <a class="clients__link" href="">
                 <svg class="client__icon" width="106px" height="60px">
-                  <use href="./images/icons.svg#icon-Company-3"></use>
+                  <use href="./images/icons.svg#client-3"></use>
                 </svg>
               </a>
             </li>
             <li class="clients__item">
               <a class="clients__link" href="">
                 <svg class="client__icon" width="106px" height="60px">
-                  <use href="./images/icons.svg#icon-Company-4"></use>
+                  <use href="./images/icons.svg#client-4"></use>
                 </svg>
               </a>
             </li>
             <li class="clients__item">
               <a class="clients__link" href="">
                 <svg class="client__icon" width="106px" height="60px">
-                  <use href="./images/icons.svg#icon-Company-5"></use>
+                  <use href="./images/icons.svg#client-5"></use>
                 </svg>
               </a>
             </li>
             <li class="clients__item">
               <a class="clients__link" href="">
                 <svg class="client__icon" width="106px" height="60px">
-                  <use href="./images/icons.svg#icon-Company-6"></use>
+                  <use href="./images/icons.svg#client-6"></use>
                 </svg>
               </a>
             </li>
