--- a/index.html
+++ b/index.html
@@ -43,10 +43,14 @@
         <div class="mobile__menu" data-menu>
           <ul class="menu__list list">
             <li class="menu__item">
-              <a class="menu__link link" href="./index.html">Студия</a>
+              <a class="menu__link menu__link--activ link" href="./index.html"
+                >Студия</a
+              >
             </li>
             <li class="menu__item">
-              <a class="menu__link link" href="./portfolio.html">Портфолио</a>
+              <a class="menu__link menu__link link" href="./portfolio.html"
+                >Портфолио</a
+              >
             </li>
             <li class="menu__item">
               <a class="menu__link link" href="">Контакты</a>
